# dry

./: Cargo.toml  LICENSE  README.md  pyproject.toml  rustfmt.toml
dry/: __init__.py  api.py  dry.pyi  interface.py  ipcProxy.js
examples/: example.py  main.html  main.py  minimal.py  titlebar.html  titlebar.py
prototypes/: main.html  main.py
src/: api.rs  events.rs  lib.rs  types.rs  webview.rs  window.rs
src/js/: api.js  window_borders.js  window_events.js  window_functions.js
