[package]
name = "dry-webview"
version = "0.3.2"
edition = "2021"

[lib]
name = "dry"
crate-type = ["cdylib"]

[dependencies]
wry = "0.50"
image = { version = "0.25", default-features = false, features = ["ico"] }
tao = { version = "0.32", default-features = false, features = [
    "rwh_06",
    "serde",
] }
pyo3 = { version = "0.24", default-features = false, features = [
    "extension-module",
    "macros",
] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
